# KURS

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
kurs/: CMakeLists.txt
kurs/src/: kurspch.h  kurspch.hpp
kurs/src/Asset/: AssetBase.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetSerializer.hpp
kurs/src/Core/: CompilerInfo.hpp  FormatString.cpp  FormatString.hpp  FuncName.hpp  IDRegistry.cpp  IDRegistry.hpp  IterableRange.hpp  Timer.cpp  Timer.hpp  TypeID.cpp  TypeID.hpp  TypeName.hpp  Types.hpp
kurs/src/Debug/: BreakPoint.hpp
kurs/src/Debug/Assertion/: Assert.hpp  AssertImpl.cpp  AssertImpl.hpp
kurs/src/Debug/Logging/: ConsoleLogWriter.cpp  ConsoleLogWriter.hpp  FileLogWriter.cpp  FileLogWriter.hpp  Logger.cpp  Logger.hpp  TimedLogFormatter.cpp  TimedLogFormatter.hpp
kurs/src/ECS/: ComponentBase.hpp  ComponentPool.hpp  Entity.cpp  Entity.hpp  EntityID.hpp  EntityRegistry.cpp  EntityRegistry.hpp  EntitySystem.hpp  Scene.cpp  Scene.hpp
kurs/src/Event/: EventBase.hpp  EventBus.cpp  EventBus.hpp  EventPoster.cpp  EventPoster.hpp  EventSubscriber.cpp  EventSubscriber.hpp
kurs/src/Game/: App.cpp  App.hpp  FpsDisplayScript.cpp  FpsDisplayScript.hpp  main.cpp
kurs/src/GameApp/: main.cpp
kurs/src/Math/: Vector.cpp  Vector.hpp
kurs/src/Memory/: Allocator.hpp  ObjectAllocator.hpp  StandardAllocator.cpp  StandardAllocator.hpp
kurs/src/Scripting/: Components.cpp  Components.hpp  NativeScript.cpp  NativeScript.hpp  ScriptSystem.cpp  ScriptSystem.hpp
